# sachin_website

./: .replit  LICENSE  README.md  app.py  database.py  pyproject.toml
templates/: application_submitted.html  banner.html  home .html  jobitem.html  nav.html
